# langchain_tutorials

./: .gitignore  03_exercise.py  04_exercise.py  05_exercise.py  08_exercise.py  exercise_01.py  exercise_02.py  exercise_06.py  exercise_07.py  exercise_09.py  exercise_13.py  exercise_14.py  exercise_15.json  exercise_16.py  exercise_17.py  exercise_18.py  exercise_19.py  exercise_20.py  exercise_21.py  exercise_22.py  exercise_23.py  exercise_24.py  exercise_27.py  exercise_28.py  exercise_31.py  exercise_32.py  exercise_33.py  exercise_34.py  exercise_35.py  exercise_36.py  exercise_37.py  exercise_39.py  exercise_40.py  exercise_42.py  exercise_43.py  exercise_44.py  exercise_45.py  exercise_46.py  exercise_47.py  exercise_48.py  (+12 more)
10_exercise_DietChatbot/: ui.py
11_exercise_DietChatbot/: main.py  ui.py
States/: State_63.py
data/: data_17.json  data_25.json  data_31.json  data_38.csv  ecommerce.json  nutrition.python
exercise_10/: logic.py  main.py
exercise_12/: conversations.db  logic.py
exercise_25/: app.py  prompt.md
exercise_26/: eval.py  prompt.md
exercise_29/: app.py  prompt.md
exercise_30/: app.py  prompt.md
exercise_38/: prompt.md  questions.txt  rag.py
exercise_59/: assistant.py  book_room.py  calculate_cost.py  prompt.md  query_hotels.py  test.py  weather.py
exercise_60/: assistant_langchain.py  assistant_langgraph.py  main.py  prompt2.md  prompt3.md  tools.py
exercise_DietChatbot_11/: logic.py
exercise_DietChatbot_12/: ui.py
prompts/: prompt25.xml  prompt_25.md  prompt_25.txt  prompt_33.md  prompt_62.py
